# datacatalog-connectors-hive-databricks

./: .gitignore
.github/workflows/: pythonpackage.yml
google-datacatalog-hive-databricks-connector/: Dockerfile  README.md  cloudbuild.connector.yaml  pyproject.toml  setup.py
google-datacatalog-hive-databricks-connector/src/google/datacatalog_connectors/hive_databricks/entities/: column.py  database.py  table.py  table_params.py  table_storage.py
google-datacatalog-hive-databricks-connector/src/google/datacatalog_connectors/hive_databricks/prepare/: assembled_entry_factory.py  datacatalog_entry_factory.py
google-datacatalog-hive-databricks-connector/src/google/datacatalog_connectors/hive_databricks/scrape/: metadata_database_scraper.py  metadata_sync_event_scraper.py
google-datacatalog-hive-databricks-connector/src/google/datacatalog_connectors/hive_databricks/sync/: datacatalog_synchronizer.py
google-datacatalog-hive-databricks-connector/tests/google/datacatalog_connectors/hive/: datacatalog_cli_test.py
google-datacatalog-hive-databricks-connector/tests/google/datacatalog_connectors/hive/scrape/: metadata_database_scraper_test.py  metadata_sync_event_scraper_test.py
google-datacatalog-hive-databricks-connector/tests/google/datacatalog_connectors/hive/sync/: datacatalog_synchronizer_test.py
google-datacatalog-hive-databricks-connector/tools/: hive2datacatalog_database_client_sample.py
