[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-datacatalog-hive-databricks-connector"
version = "0.0.1"
authors = [
    { name="Example Author", email="author@example.com" },
]
description = "Library for ingesting Hive metadata from Databricks into Google Cloud Data Catalog"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
